metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/The_Juice_Intent_Signal__c.object-meta.xml
<CustomObject>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>The Juice Intent Signal</label>
    <nameField>
        <label>The Juice Intent Signal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>The Juice Intent Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>