metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>The Juice Intent Signals</relationshipLabel>
    <relationshipName>The_Juice_Intent_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>