metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>Company_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>