metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>Company_Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>