metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>Job_Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>