metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>Kind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>