metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>Related_Object</label>
    <type>Url</type>
</CustomField>