metadata/force-app/main/default/objects/The_Juice_Intent_Signal__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <description>BODEV-2411 Integrate TheJuice w/salesforce</description>
    <label>Search_Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>